@@ -523,6 +523,8 @@ public class ItemAddListener
         item.setHasRationale(Boolean.FALSE);
       }
 
+      item.setPartialCreditFlag(Boolean.valueOf(bean.getPartialCreditFlag()));
+      
       // update maxNumAttempts for audio
       if (bean.getNumAttempts() != null) {
         item.setTriesAllowed(Integer.valueOf(bean.getNumAttempts()));
@@ -789,7 +791,7 @@ public class ItemAddListener
 							.getMatch()), answerbean.getSequence(), AnswerBean
 							.getChoiceLabels()[answerbean.getSequence()
 							.intValue() - 1], Boolean.TRUE, null, Float.valueOf(
-							bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+							bean.getItemScore()), Float.valueOf(0f), Float.valueOf(bean.getItemDiscount()));
 
 					// only add feedback for correct pairs
 					HashSet answerFeedbackSet = new HashSet();
@@ -806,7 +808,7 @@ public class ItemAddListener
 							.getMatch()), answerbean.getSequence(), AnswerBean
 							.getChoiceLabels()[answerbean.getSequence()
 							.intValue() - 1], Boolean.FALSE, null,  Float.valueOf(
-							bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+							bean.getItemScore()), Float.valueOf(0f), Float.valueOf(bean.getItemDiscount()));
 				}
 
 				// record answers for all combination of pairs
@@ -867,11 +869,11 @@ public class ItemAddListener
 
 					newanswer = new Answer(text1, theanswer, Long.valueOf(i + 1),
 							"", Boolean.TRUE, null, Float.valueOf(bean
-									.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+									.getItemScore()), Float.valueOf(0f), Float.valueOf(bean.getItemDiscount()));
 				} else {
 					newanswer = new Answer(text1, theanswer, Long.valueOf(i + 1),
 							"", Boolean.FALSE, null, Float.valueOf(bean
-									.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+									.getItemScore()), Float.valueOf(0f), Float.valueOf(bean.getItemDiscount()));
 				}
 				answerSet1.add(newanswer);
 			}
@@ -891,7 +893,7 @@ public class ItemAddListener
 			// label is null because we don't use labels in essay questions
 			// theanswer is the model answer used as a sample for student
 			Answer modelanswer = new Answer(text1, theanswer, Long.valueOf(1),
-					null, Boolean.TRUE, null, Float.valueOf(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+					null, Boolean.TRUE, null, Float.valueOf(bean.getItemScore()), Float.valueOf(0f), Float.valueOf(bean.getItemDiscount()));
 
 			HashSet answerFeedbackSet1 = new HashSet();
 
@@ -911,7 +913,7 @@ public class ItemAddListener
 
 			for (int i = 0; i < choices.length; i++) {
 				Answer answer1 = new Answer(text1, choices[i], Long.valueOf(i + 1),
-						null, null, null, Float.valueOf(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+						null, null, null, Float.valueOf(bean.getItemScore()), Float.valueOf(0f), Float.valueOf(bean.getItemDiscount()));
 				answerSet1.add(answer1);
 			}
 			text1.setAnswerSet(answerSet1);
@@ -931,7 +933,7 @@ public class ItemAddListener
 				String oneanswer = (String) fibanswers[i];
 				Answer answer1 = new Answer(text1, oneanswer, Long.valueOf(i + 1),
 						null, Boolean.TRUE, null,
-						Float.valueOf(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+						Float.valueOf(bean.getItemScore()), Float.valueOf(0f), Float.valueOf(bean.getItemDiscount()));
 				answerSet1.add(answer1);
 			}
 
@@ -951,7 +953,7 @@ public class ItemAddListener
 				String oneanswer = (String) finanswers[i];
 				Answer answer1 = new Answer(text1, oneanswer, Long.valueOf(i + 1),
 						null, Boolean.TRUE, null,
-						Float.valueOf(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+						Float.valueOf(bean.getItemScore()), Float.valueOf(0f), Float.valueOf(bean.getItemDiscount()));
 				answerSet1.add(answer1);
 			}
 
@@ -975,12 +977,29 @@ public class ItemAddListener
 					answer = new Answer(text1,
 							stripPtags(answerbean.getText()), answerbean
 									.getSequence(), answerbean.getLabel(),
-							Boolean.TRUE, null, Float.valueOf(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+							Boolean.TRUE, null, Float.valueOf(bean.getItemScore()), Float.valueOf(100f), Float.valueOf(bean.getItemDiscount()));
 				} else {
-					answer = new Answer(text1,
-							stripPtags(answerbean.getText()), answerbean
-									.getSequence(), answerbean.getLabel(),
-							Boolean.FALSE, null, Float.valueOf(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+					if (item.getTypeId().equals(TypeFacade.MULTIPLE_CHOICE)&&item.getPartialCreditFlag()){
+						Float pc =  answerbean.getPartialCredit(); //--mustansar
+						if (pc == null) {
+							pc = Float.valueOf(0f);
+						}
+						answer = new Answer(text1, 
+								stripPtags(answerbean.getText()), 
+								answerbean.getSequence(),
+								answerbean.getLabel(),
+								Boolean.FALSE, null, Float.valueOf(bean.getItemScore()) , 
+								pc,
+								Float.valueOf(bean.getItemDiscount()));}
+					else {
+						answer = new Answer(text1, 
+								stripPtags(answerbean.getText()), 
+								answerbean.getSequence(),
+								answerbean.getLabel(),
+								Boolean.FALSE, null, Float.valueOf(bean.getItemScore()) ,
+								Float.valueOf(0f), //No partial Credit since it is not enabled the column is not null 
+								Float.valueOf(bean.getItemDiscount()));
+					}
 				}
 				HashSet answerFeedbackSet1 = new HashSet();
 				answerFeedbackSet1.add(new AnswerFeedback(answer,
@@ -1114,7 +1133,7 @@ public class ItemAddListener
 		  
 		  for (int i = 0; i < choices.length; i++) {
 			  AnswerIfc answer = new PublishedAnswer(text, choices[i], Long.valueOf(i + 1),
-					null, null, null, Float.valueOf(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+					null, null, null, Float.valueOf(bean.getItemScore()), null, Float.valueOf(bean.getItemDiscount()));
 			  answerSet.add(answer);
 		  }
 		  text.setAnswerSet(answerSet);
@@ -1161,7 +1180,7 @@ public class ItemAddListener
 					String oneanswer = (String) answers[j];
 					AnswerIfc answer = new PublishedAnswer(text, oneanswer,
 							Long.valueOf(j + 1), null, Boolean.TRUE, null,
-							Float.valueOf(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+							Float.valueOf(bean.getItemScore()), null, Float.valueOf(bean.getItemDiscount()));
 					answerSet.add(answer);
 				}
 			}
@@ -1201,6 +1220,7 @@ public class ItemAddListener
 					answer.setScore(Float.valueOf(bean.getItemScore()));
 					answerBean = (AnswerBean) newAnswerMap.get(Long.valueOf(String.valueOf(i)));
 					String oneAnswer = stripPtags(answerBean.getText());
+					answer.setPartialCredit(answerBean.getPartialCredit());
 					String oneLabel = answerBean.getLabel();
 					log.debug("oneAnswer = " + oneAnswer);
 					log.debug("oneLabel = " + oneLabel);
@@ -1231,12 +1251,12 @@ public class ItemAddListener
 					if (isCorrectChoice(bean, answerBean.getLabel().trim())) {
 						answer = new PublishedAnswer(text, oneAnswer,
 							Long.valueOf(j), oneLabel, Boolean.TRUE, null,
-							Float.valueOf(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+							Float.valueOf(bean.getItemScore()), Float.valueOf(100f), Float.valueOf(bean.getItemDiscount()));
 					}
 					else {
 						answer = new PublishedAnswer(text, oneAnswer,
 								Long.valueOf(j), oneLabel, Boolean.FALSE, null,
-								Float.valueOf(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+								Float.valueOf(bean.getItemScore()), answerBean.getPartialCredit(), Float.valueOf(bean.getItemDiscount()));
 					}
 					HashSet answerFeedbackSet = new HashSet();
 				    answerFeedbackSet.add(new PublishedAnswerFeedback(answer,
@@ -1313,16 +1333,14 @@ public class ItemAddListener
 										.getSequence(), AnswerBean
 										.getChoiceLabels()[matchBean
 										.getSequence().intValue() - 1],
-								Boolean.TRUE, null, new Float(bean
-										.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+								Boolean.TRUE, null, new Float(bean.getItemScore()), null, Float.valueOf(bean.getItemDiscount()));
 					} else {
 						answer = new PublishedAnswer(itemText,
 								stripPtags(matchBean.getMatch()), matchBean
 										.getSequence(), AnswerBean
 										.getChoiceLabels()[matchBean
 										.getSequence().intValue() - 1],
-								Boolean.FALSE, null, new Float(bean
-										.getItemScore()), Float.valueOf(bean.getItemDiscount()));
+								Boolean.FALSE, null, new Float(bean.getItemScore()), null, Float.valueOf(bean.getItemDiscount()));
 					}
 
 					// record answers for all combination of pairs
